@@ -1,3 +1,10 @@
+2004-08-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b101
+
+        * Fix: Print fatal error message instead of obscure PHP error
+          when userDB fails to init before we try and use it.
+
+	* Change: Print the correct graphics package path in check_imagemagick.php
+
 2004-08-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b100
 
 	* Change: Add 'properties' link to the main page for 
